--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
   "builds": [
-    { "src": "api/main.py", "use": "@vercel/python" }
+    { "src": "backend/main.py", "use": "@vercel/python" },
+    { "src": "frontend/package.json", "use": "@vercel/static-build" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "api/main.py" }
-  ]
+    { "src": "/api/(.*)", "dest": "backend/main.py" },
+    { "src": "/(.*)", "dest": "/frontend/$1" }
+  ],
+  "functions": {
+    "backend/main.py": {
+      "runtime": "@vercel/python"
+    }
+  }
 }
