--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,5 @@
 {
-  "builds": [
-    { "src": "backend/main.py", "use": "@vercel/python" },
-    { "src": "frontend/package.json", "use": "@vercel/static-build" }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "backend/main.py" },
-    { "src": "/(.*)", "dest": "/frontend/$1" }
-  ],
-  "functions": {
-    "backend/main.py": {
-      "runtime": "@vercel/python"
-    }
-  }
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
+  "rootDirectory": "frontend"
 }
