--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "^5.0.1"
+    "framer-motion": "^11.0.0"
   },
   "description": "",
   "browserslist": {
