--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "framer-motion": "^12.23.1",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "^5.0.1"
-    "framer-motion": "^11.0.0"
-  },
+    },
   "description": "",
   "browserslist": {
     "production": [
