--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.3",
     "tailwindcss": "^3.x"
   },
   "description": "",
