--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.x",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.3",
     "tailwindcss": "^3.x"
