--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^7.6.3",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.3",
+    "react-syntax-highlighter": "^15.6.1",
     "tailwindcss": "^3.x"
   },
   "description": "",
